fix nav list on mobile screen

--- a/phalcon/css/core-custom.css
+++ b/phalcon/css/core-custom.css
@@ -174,6 +174,10 @@
   .features-slider__nav-item {
     font-size: 14px;
   }
+
+  .buildwith-nav__list a {
+    padding: 8px 10px 8px;
+  }
 }
 
 .sponsors__item img {
